Add simple inro and outro

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,12 @@ canvas {
   display: block;
   margin: 0 auto;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  margin-top: 20px;
+}
