--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,10 +2,9 @@ $body-color: red;
 
 body {
   color: $body-color;
+  background-image: url('../../public/assets/images/hexellence.png');
 }
 canvas {
-  border: 1px solid #d3d3d3;
-  background-color: #f1f1f1;
   display: block;
   margin: 0 auto;
 }
