--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1,5 +1,6 @@
 body {
-  color: red;
+  color: rgba(0, 0, 0, 0.87);
+  font-family: Arial, Helvetica, sans-serif;
   background-image: url(public/assets/images/hexellence.png); }
 
 canvas {
@@ -15,6 +16,11 @@ canvas {
 
 .ver-info {
   text-align: right; }
+
+.info p {
+  text-align: center; }
+  .info p span {
+    font-weight: bold; }
 
 
 /*# sourceMappingURL=bundle.css.map*/
