--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,8 @@
-$body-color: red;
+$font-color: rgba(0, 0, 0, 0.87);
 
 body {
-  color: $body-color;
+  color: $font-color;
+  font-family: Arial, Helvetica, sans-serif;
   background-image: url('../../public/assets/images/hexellence.png');
 }
 canvas {
@@ -20,4 +21,13 @@ canvas {
 
 .ver-info {
   text-align: right;
+}
+
+.info {
+  p {
+    text-align: center;
+    span {
+      font-weight: bold;
+    }
+  }
 }
