Add info about the need to clear cache

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,7 +30,9 @@ canvas {
     background: lighten($color: #34495e, $amount: 10);
   }
 }
-
+.cache-info {
+  margin-left: 15px;
+}
 .ver-info {
   text-align: right;
 }
